--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         
     </form>
     <main id="main">
+        <div id="loader" class="loader"></div>
         <div id="user-card" class="card"></div>
         <div id="repos" class="repos-container"></div>
         <div id="pagination" class="pagination-container"></div>
